einstellung_derive/src/snapshots/einstellung_derive__test__invalid.snap
---
source: src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig(u16);
/// --- output ---
::core::compile_error! {
    "Unsupported shape `one unnamed field`. Expected named fields."
}
