einstellung_derive/src/snapshots/einstellung_derive__test__invalid_merge.snap
---
source: src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    host: String,
    port: u16,
    #[config(merge = "foo")]
    is_active: bool,
}
/// --- output ---
::core::compile_error! {
    "Unknown value: `foo`. Available values: `append`, `function`, `replace`, `subconfig`"
}
