einstellung_derive/src/snapshots/einstellung_derive__test__output_basic_primitives.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    host: String,
    port: u16,
    is_active: bool,
}

/// --- output ---
///Partial configuration for the `ServerConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ServerConfigPartial {
    ///Partial value for the `host` configuration field.
    host: ::core::option::Option<String>,
    ///Partial value for the `port` configuration field.
    port: ::core::option::Option<u16>,
    ///Partial value for the `is_active` configuration field.
    is_active: ::core::option::Option<bool>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ServerConfigPartial {
    type Complete = ServerConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            host: next.host.or(self.host),
            port: next.port.or(self.port),
            is_active: next.is_active.or(self.is_active),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(ServerConfig {
            host: self
                .host
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ServerConfig", "host"),
                    ),
                )?,
            port: self
                .port
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ServerConfig", "port"),
                    ),
                )?,
            is_active: self
                .is_active
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ServerConfig", "is_active"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.host).is_some() {
            fields.push(::std::string::String::from("host"));
        }
        if (&self.port).is_some() {
            fields.push(::std::string::String::from("port"));
        }
        if (&self.is_active).is_some() {
            fields.push(::std::string::String::from("is_active"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for ServerConfig {
    type Partial = ServerConfigPartial;
}
