einstellung_derive/src/snapshots/einstellung_derive__test__output_custom_merge_freezable_field.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- helper ---
pub fn merge_hosts(
    a: Option<String>,
    b: Option<String>,
) -> Result<Option<String>, &'static str> {
    Ok(b.or(a))
}

// ---------------------------------

/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(freezable, merge(function = "merge_hosts"))]
    host: String,
}

/// --- output ---
///Partial configuration for the `ServerConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ServerConfigPartial {
    ///Partial value for the `host` configuration field.
    host: ::einstellung::Freeze<::core::option::Option<String>>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ServerConfigPartial {
    type Complete = ServerConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            host: match ::einstellung::FreezeCombination::of_freeze(
                self.host,
                next.host,
            ) {
                ::einstellung::FreezeCombination::BothFree(left, right) => {
                    ::einstellung::Freeze::Free({
                        let _: ::einstellung::MergeFunction<
                            ::core::option::Option<String>,
                            _,
                        > = merge_hosts;
                        merge_hosts(left, right)
                            .map_err(|reason| ::einstellung::ConfigError::CustomMerge {
                                field: ::einstellung::FieldPath::new(
                                    "ServerConfig",
                                    "host",
                                ),
                                reason: ::einstellung::into_box_error(reason),
                            })?
                    })
                }
                ::einstellung::FreezeCombination::OneFrozen(x) => {
                    ::einstellung::Freeze::Frozen(x)
                }
                ::einstellung::FreezeCombination::BothFrozen => {
                    return ::core::result::Result::Err(
                        ::einstellung::ConfigError::FreezeCollision(
                            ::einstellung::FieldPath::new("ServerConfig", "host"),
                        ),
                    );
                }
            },
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(ServerConfig {
            host: ::einstellung::Freeze::into_inner(self.host)
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ServerConfig", "host"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (match &self.host {
            ::einstellung::Freeze::Free(value) | ::einstellung::Freeze::Frozen(value) => {
                value
            }
        })
            .is_some()
        {
            fields.push(::std::string::String::from("host"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Freezable for ServerConfigPartial {
    fn freeze(self) -> Self {
        Self {
            host: ::einstellung::Freezable::freeze(self.host),
        }
    }
    fn is_frozen(&self) -> bool {
        ::einstellung::Freezable::is_frozen(&self.host)
    }
}
#[automatically_derived]
impl ::einstellung::Config for ServerConfig {
    type Partial = ServerConfigPartial;
}
